# Rest_api_practice

./: .gitignore  alembic.ini  config.py  database.py  main.py  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 74b928e05406_create_user_table.py  84b4bf824da9_table_user__order.py  86d3ffda6fa4_.py  8d2a5c7beaed_table_order.py  d1ca124cf549_name.py  da7c755d0316_create_profession.py  e7af500ace6b_update_order_table.py
src/api/: order.py  schemas.py  user.py  user__order.py
src/domain/order/: model.py  repository.py  schema.py
src/domain/profession/: model.py  repository.py
src/domain/user/: model.py  repository.py  schema.py
src/domain/user__order/: model.py  repository.py  schema.py
