[project]
name = "rest-api-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.12.0",
    "asyncpg==0.28.0",
    "psycopg==3.1.10",
    "sqlalchemy==2.0.20",
    "fastapi==0.103.1",
    "pydantic==2.3.0",
    "pydantic-settings==2.0.3",
    "uvicorn==0.23.2",
    ]
